--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="about_us.php">About us</a></li>
-        <li><a href="services.php">Services</a></li>
+        <li><a href="about_us.html">About us</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Clients</a></li>
         <li><a href="#">Events</a></li>
-        <li><a href="contact_us.php">Contact</a></li>
+        <li><a href="contact_us.html">Contact</a></li>
         </ul>
   </div>
 </nav> 
