--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="assets/logo.png" alt="Shree Enviro Tech Logo"> <!-- Replace with actual logo -->
+            <img src="assets/logo.png" alt="Shree Enviro Tech Logo"> 
         </div>
         <nav class="navbar navbar-default">
         <div class="container-fluid">
