--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer>
         <p>&copy; 2025 Shree Enviro Tech. All rights reserved.</p>
         <div class="social-media">
-            <a href="#"><img src="assets/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="assets/facebook.PNG" alt="Facebook"></a>
             <a href="#"><img src="assets/linkedin.png" alt="LinkedIn"></a>
             <a href="#"><img src="assets/twitter.jpg" alt="Twitter"></a>
         </div>
