--- a/services.html
+++ b/services.html
@@ -283,6 +283,10 @@ on water quality and client needs. WTPs are widely used in municipal, industrial
             
         </ul>
     </div>
+      <section class="chatbot">
+        <h3>Need Help? Chat with Us!</h3>
+        <p>[Chatbot Integration Coming Soon]</p>
+    </section>
 
 </body>
 </html>
