--- a/services.html
+++ b/services.html
@@ -148,6 +148,20 @@ nav ul li a:hover {
                 grid-template-columns: 1fr;
             }
         }
+        .chatbot {
+    background-color: #fff;
+    padding: 30px;
+    width: 60%;
+    margin: 20px auto;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.chatbot h3 {
+    color: #004d40;
+    margin-bottom: 10px;
+}
+
     </style>
 </head>
 <body>
@@ -287,6 +301,9 @@ on water quality and client needs. WTPs are widely used in municipal, industrial
         <h3>Need Help? Chat with Us!</h3>
         <p>[Chatbot Integration Coming Soon]</p>
     </section>
+    
+   
+
 
 </body>
 </html>
