--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <section class="hero" style="background: url('assets/tinu.jpg') no-repeat center center/cover; height: 400px;">
     <h1>Welcome to Shree Enviro Tech !</h1>
     <h4>Your trusted partner in Environmental Engineering & Biomass Power Plants.</h4>
-    <a href="contact_us.php" class="btn">Get in Touch</a>
+    <a href="contact_us.html" class="btn">Get in Touch</a>
 </section>
 
 <section class="about-overview">
