--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li>✅ Oil Skimmers & Bio-Culture Solutions</li>
         </ul>
         <div style="text-align: center; margin-top: 20px;">
-            <a href="services.php" class="btn">View All Services</a>
+            <a href="services.html" class="btn">View All Services</a>
         </div>
     </section>
 
